--- a/web/css/components/alert.css
+++ b/web/css/components/alert.css
@@ -1,12 +1,29 @@
-/* Alert component */
-
+/* Base */
 div.alert {
     position: relative;
     height: 500px;
 }
-div.alert div.window {
-    width: 40%;
+div.alert > div.window {
     margin: auto;
-    border: 1px solid black;
-    background: #aaa;
+    padding: 5px;
+}
+div.alert > div.window > div.button {
+    margin-top: 5px;
+    text-align: center;
+    cursor: pointer;
+}
+
+/* Type : error */
+div.alert > div.window.error {
+    width: 200px;
+    background: #ccc;
+    border: 1px solid #990000;
+}
+div.alert > div.window.error > div.title {
+    color: #990000;
+    font-weight: bold;
+}
+div.alert > div.window.error > div.button {
+    background: #bbb;
+    border: 1px solid #aaa;
 }
