--- a/web/css/modules/directUI/inputs/textfield-block.css
+++ b/web/css/modules/directUI/inputs/textfield-block.css
@@ -33,6 +33,9 @@ div.cpnInputTextfieldBlock > div.wrapper > div.input > div.icon {
     border: 1px solid #444;
     border-radius: 4px;
 }
+div.cpnInputTextfieldBlock > div.wrapper > div.input > div.icon.locked {
+    background-image: url('../visuals/security_closed_32.png');
+}
 div.cpnInputTextfieldBlock > div.wrapper > div.input > div.icon.focus {
     background-image: url('../visuals/arrow_sans_right_32.png');
 }
@@ -50,6 +53,7 @@ div.cpnInputTextfieldBlock > div.wrapper > div.input > div.icon.loading {
 div.cpnInputTextfieldBlock > div.wrapper > div.input > input {
     height: 24px;
     padding: 2px 64px 2px 12px;
+    color: #444;
     border: 1px solid #444;
     border-radius: 8px 0px 0px 8px;
     background-color: #eee;
